--- a/frontend/pingpong/package.json
+++ b/frontend/pingpong/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.8",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
